# AIE7

./: .gitignore  LICENSE
00_AIM_Quicklinks/: README.md
01_Prompt Engineering and Prototyping Best Practices/: ACTIVITIES.md
02_Embeddings_and_RAG/: Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb  README.md
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  fix_notebook.py  (+1 more)
11_Assignment/: .dockerignore  .gitignore  README.md  certification_report.md  compare_chunking_strategies.py  development.ipynb  development_v1.ipynb  docker-compose.dev.yml  docker-compose.yml  load_pdfs_fast.py  load_pdfs_with_progress.py  main.py  mvp_perfomance_analysis.ipynb  pyproject.toml  test_chunking_differences.py
11_Assignment/backend/: Dockerfile
11_Assignment/backend/app/: main.py  schemas.py
11_Assignment/backend/app/graph/: builder.py  nodes.py  state.py  tools.py
11_Assignment/frontend/: .dockerignore
11_Assignment/frontend/src/app/: globals.css  page.tsx
11_Assignment/manualaize/: __init__.py
11_Assignment/scripts/: setup_dev.py  start_jupyter.py  verify_kernel.py
11_Assignment/tests/: __init__.py  test_basic.py
(+123 files in other folders)
