[project]
name = "11-assignment"
version = "0.1.0"
description = "An agentic application to interact with user manuals."
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "langchain-community>=0.3.27",
    "langchain-cohere>=0.4.5",
    "langgraph>=0.6.3",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.3.3",
    "qdrant-client>=1.12.1",
    "cohere>=5.5.5",
    "pypdf>=4.2.0",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.4",
]
